update my about us page

--- a/about.html
+++ b/about.html
@@ -11,7 +11,8 @@
     </style>
 </head>
 <body>
-    <p>This is the About page.</p>
+    <h1>About Me</h1>
+    <p>My name is Davy, I am 18 years old and I am from kenya. I am currently a student  at university. I have always been interested in technology and programming, and I am excited to learn more about it in the future.</p>
     
 </body>
 </html>
