--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <p>My name is Davy, I am 18 years old and I am from kenya. I am currently a student  at university. I have always been interested in technology and programming, and I am excited to learn more about it in the future.</p>
+    <p>My name is Davy, I am 18 years old and I am from kenya. I am currently a student  at karatina university. I have always been interested in technology and programming, and I am excited to learn more about it in the future.</p>
     
 </body>
 </html>
