--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <header>
+        <h1>Welcome to My Website</h1>
+        <h2>SUDU TECH</h2>
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -16,7 +18,6 @@
 
     </header>
     <main>
-
     </main>
     <footer>
 
