--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     </style>
 </head>
 <body>
-    <h1>contact me through</h1>
-    <p>0759459594</p>
+    <h1>contact:  0759459594 </h1>
+    <p>email: davidmuthua@gmail.com</p>
     
 </body>
 </html>
