--- a/home.html
+++ b/home.html
@@ -5,8 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home page</title>
 </head>
-<body>
-    <h1>Welcome to the Home Page</h1>
-    
-</body>
+<section>
+     <h1>Hi, I'm DAVID MUTHUA</h1>
+    <h2>A Web developer and Designer</h2>
+    <p>Welcome to my portfolio website!</p>
+    <div class="btn-sci">
+        <a href="Download CV" class="btn">Download CV</a>
+        <div class="sci">
+            <a href="#"><i class='bx bx-github'></i></a>
+            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
+
+        </div>
+        <div class="HOME-img">
+            <div class="img-box">
+                <div class="img item">
+                    <img src="JPEG File" alt="">
+
+                </div>
+
+            </div>
+
+
+        </div>
+
+    </section>
+  
 </html>
