--- a/about.html
+++ b/about.html
@@ -11,8 +11,23 @@
     </style>
 </head>
 <body>
-    <h1>About Me</h1>
-    <p>My name is Davy, I am 18 years old and I am from kenya. I am currently a student  at karatina university. I have always been interested in technology and programming, and I am excited to learn more about it in the future.</p>
+    <nav></nav>
+
+    <section class="about">
+        <h1>About Me</h1>
+        <p>My name is Davy, I am 18 years old and I am from kenya. I am currently a student  at karatina university. I have always been interested in technology and programming, and I am excited to learn more about it in the future.</p>
+<h2>My Skills</h2>
+<ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Git & GitHub</li>
+    <li>Python</li>
+</ul>
+<h2>Education</h2>
+<p> BSc in Computer Science</p>
+
+    </section>
+   
     
 </body>
 </html>
