--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <Nav class ="navbar"> 
+       <Nav class ="navbar"> 
             <a href="portfolio.html" class="logo">portfolio</a>
             <ul>
             <li><a href="home.html">HOME</a></li>
@@ -18,10 +16,23 @@
             <li><a href="services.html">SERVICES</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
+<style>
+    body {
+        background-image: url("image.html.jpeg.jpeg");
+        background-size: cover;
+        background-position: center;
+        height: 100vh;
+    }
+</style>
     </Nav>
-    </header>
-    <main>
-    </main>
+    <section class="hero">
+        <h1>Hello, I'm David Muthua</h1>
+        <p>computer science student | AI &cybersecurity Enthusiast</p>
+        <a href="contact.html" class="btn">HIRE ME</a>
+     
+    </section>
+
+     
     <footer>
         <p>&copy; 2026 David Muthua. All rights reserved.</p>
 
