--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>about page</title>
     <style>
         p{
-            color: blue;
+            color: rgb(34, 34, 49);
         }
     </style>
 </head>
@@ -15,7 +15,7 @@
 
     <section class="about">
         <h1>About Me</h1>
-        <p>My name is Davy, I am 18 years old and I am from kenya. I am currently a student  at karatina university. I have always been interested in technology and programming, and I am excited to learn more about it in the future.</p>
+        <p>I am a Computer Science student with a strong interest in Artificial Intelligence and Cybersecurity, complemented by hands-on experince in Web Development, Graphic Design and Software Testing. My multidisciplinary background allows me to approach technology from both a creative and analytical perspective, designing intuitive user experiences, developing responsive and scalable web applications, and ensuring system reliabilty through structured testing practices. I am passionate about building secure, intelligent, and visually compelling digital solutions that align with modern industry standards. As I grow within the tech ecosystem, I remain committed to continuous learning, innovation, and delivering impactful technological solutions.</p>
 <h2>My Skills</h2>
 <ul>
     <li>HTML</li>
@@ -25,7 +25,23 @@
 </ul>
 <h2>Education</h2>
 <p> BSc in Computer Science</p>
-
+<h2>Technical Focus</h2>
+<ul>
+    <li>Web Development</li>
+    <li>Cybersecurity</li>
+    <li>Artificial Intelligence</li>
+    <li>Software Testing</li>
+    <li>Graphic Design</li>
+</ul>
+<h2>Career vision</h2>
+<p>My goal is to operate within innovative and secure technology environments where I can contribute to the development of intelligent systems, strengthen digital security infrastructures, and deliver user centered solutions that create real-world impact.</p>
+<ul>
+    <li> Name   :David Muthua</li>
+    <li>Age     :19</li>
+    <li>Address :Karatina, Nyeri</li>
+    <li>Phone Number :+254 759 459 594</li>
+    <li>Email   :davidmuthua4@gmail.com</li>
+</ul>
     </section>
    
     
