--- a/home.html
+++ b/home.html
@@ -6,26 +6,11 @@
     <title>home page</title>
 </head>
 <section>
-     <h1>Hi, I'm DAVID MUTHUA</h1>
-    <h2>A Web developer and Designer</h2>
-    <p>Welcome to my portfolio website!</p>
-    <div class="btn-sci">
-        <a href="Download CV" class="btn">Download CV</a>
-        <div class="sci">
-            <a href="#"><i class='bx bx-github'></i></a>
-            <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-
-        </div>
-        <div class="HOME-img">
-            <div class="img-box">
-                <div class="img item">
-
-                </div>
-
-            </div>
-
-
-        </div>
+<h1>WELCOME TO MY PORTFOLIO</h1>
+<p>Computer Science Student | AI & Cybersecurity Enthusiast</p>
+<a href="contact.html" class="btn">HIRE ME</a>
+     
+   
 
     </section>
   
