--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
        <Nav class ="navbar"> 
-            <a href="portfolio.html" class="logo">portfolio</a>
+            <a href="portfolio.html" class="logo">PORTFOLIO</a>
             <ul>
             <li><a href="home.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
@@ -24,14 +24,7 @@
         height: 100vh;
     }
 </style>
-    </Nav>
-    <section class="hero">
-        <h1>Hello, I'm David Muthua</h1>
-        <p>computer science student | AI &cybersecurity Enthusiast</p>
-        <a href="contact.html" class="btn">HIRE ME</a>
-     
-    </section>
-
+ 
      
     <footer>
         <p>&copy; 2026 David Muthua. All rights reserved.</p>
