--- a/index.html
+++ b/index.html
@@ -4,26 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
        <Nav class ="navbar"> 
             <a href="portfolio.html" class="logo">PORTFOLIO</a>
             <ul>
-            <li><a href="home.html">HOME</a></li>
+            <li class="active"><a href="home.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="portfolio.html">PORTFOLIO</a></li>
             <li><a href="services.html">SERVICES</a></li>
             <li><a href="contact.html">CONTACT</a></li>
         </ul>
-<style>
-    body {
-        background-image: url("image.html.jpeg.jpeg");
-        background-size: cover;
-        background-position: center;
-        height: 100vh;
-    }
-</style>
+        </nav>
+        
+        <section class="HOME">
+            <div class="HOME-INFO">
+                <h1>DAVID MUTHUA</h1>
+                <h2>AI & CYBERSECURITY ENTHUSIAST</h2>
+                <div class="btn-sci">
+                    <a href="Download CV" class="btn">Download CV</a>
+                    <div class="sci">
+                        <a href="#"><i class='bx bxl-github'></i></a>
+                        <a href="#"><i class='bx bxl-linkedin'></i></a>
+                        <a href="#"><i class='bx bxl-twitter'></i></a>
+
+                    </div>
+                </div>
+            </div>
+            <div class="home-img">
+                <div class="img-box">
+                    <div class="img-item">
+                        <img src="image.html.jpeg.jpeg" alt="">
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </section>
  
      
     <footer>
